--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext{
         room_version = "2.5.1"
         hilt_version = '2.48'
+        google_service = '4.4.0'
     }
 
     repositories {
@@ -12,6 +13,7 @@ buildscript {
 
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "com.google.gms:google-services:$google_service"
     }
 
 }
@@ -19,6 +21,7 @@ plugins {
     id 'com.android.application' version '8.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
 
+    id("com.google.gms.google-services") version "$google_service" apply false
     id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
     id 'com.google.devtools.ksp' version '1.9.0-1.0.13' apply false
 }
